file selector dropdown width clamped to avoid overflow for very long filenames

--- a/asset/imcomp/traherne/traherne.css
+++ b/asset/imcomp/traherne/traherne.css
@@ -176,7 +176,7 @@ body {
     text-overflow: ellipsis;
 }
 .img_label select {
-    max-width: 80%; /* squash large filenames */
+    max-width: 50%; /* squash large filenames */
 }
 
 .centered_text {
